--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         "php": "^8.1",
         "anhskohbo/no-captcha": "^3.6",
         "barryvdh/laravel-dompdf": "^3.0",
+        "doctrine/dbal": "^3.9",
         "guzzlehttp/guzzle": "^7.2",
-        "intervention/image-laravel": "^1.3",
+        "intervention/image": "2.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
